--- a/dags.yaml
+++ b/dags.yaml
@@ -287,3 +287,11 @@ bqetl_marketing_fetch:
     retries: 2
     retry_delay: 30m
 
+bqetl_release_criteria:
+  schedule_interval: daily
+  default_args:
+    owner: esmyth@mozilla.com
+    start_date: "2020-12-03"
+    email: ["telemetry-alerts@mozilla.com", "dthorn@mozilla.com"]
+    retries: 2
+    retry_delay: 30m
