Apply suggestions from code review
Co-authored-by: Teon L Brooks <teon.brooks@gmail.com>

--- a/sql/moz-fx-data-shared-prod/udf/monetize_search_v1/metadata.yaml
+++ b/sql/moz-fx-data-shared-prod/udf/monetize_search_v1/metadata.yaml
@@ -1,4 +1,4 @@
-description: Return boolean value for wheather search is monetized or not
-friendly_name: Monetize Search
+description: Return boolean value for whether search is monetized or not
+friendly_name: Monetized Search
 owners:
 - xluo@mozilla.com
