--- a/sql/mozfun/search/monetized_search/metadata.yaml
+++ b/sql/mozfun/search/monetized_search/metadata.yaml
@@ -1,7 +1,8 @@
-dscription: Return boolean value for whether search is monetized or not.
-Document is available at
-https://docs.google.com/document/d/
-1ADNStDqo7G_82nhF1zNwGZ596i4dcUXKuMel5odX100/edit?usp=sharing
+---
 friendly_name: Monetized Search
-owners:
-- xluo@mozilla.com
+dscription: |
+  Return boolean value for whether search is monetized or not.
+
+  See detailed docs for the monetized search function:
+  https://docs.google.com/document/d/
+  1ADNStDqo7G_82nhF1zNwGZ596i4dcUXKuMel5odX100/edit?usp=sharing
