--- a/dags.yaml
+++ b/dags.yaml
@@ -331,3 +331,19 @@ bqetl_desktop_platform:
       ]
     retries: 2
     retry_delay: 30m
+
+bqetl_attributed_windows_desktop_funnel:
+  default_args:
+    depends_on_past: false
+    email:
+    - wlachance@mozilla.com
+    - telemetry-alerts@mozilla.com
+    email_on_failure: true
+    email_on_retry: true
+    end_date: null
+    owner: wlachance@mozilla.com
+    retries: 2
+    retry_delay: 30m
+    start_date: '2020-07-01'
+  schedule_interval: daily
+
