--- a/bigquery_etl/events_daily/query_templates/event_types/templating.yaml
+++ b/bigquery_etl/events_daily/query_templates/event_types/templating.yaml
@@ -1,4 +1,4 @@
 org_mozilla_firefox:
   app_id: org_mozilla_firefox
 telemetry:
-  app_id: telemetry
+  app_id: telemetry # For legacy telemetry, treat the namespace as app_id
