--- a/bigquery_etl/events_daily/query_templates/event_types_history_v1/templating.yaml
+++ b/bigquery_etl/events_daily/query_templates/event_types_history_v1/templating.yaml
@@ -8,7 +8,7 @@ org_mozilla_firefox_derived:
   dag_name: bqetl_fenix_event_rollup
 telemetry_derived:
   app_id: telemetry
-  source_table: telemetry.deanonymized_events
+  source_table: telemetry_derived.deanonymized_events
   start_date: 2020-01-01
   max_property_values: 1000
   dag_name: bqetl_event_rollup
