--- a/bigquery_etl/events_daily/query_templates/events_daily_v1/templating.yaml
+++ b/bigquery_etl/events_daily/query_templates/events_daily_v1/templating.yaml
@@ -27,7 +27,7 @@ org_mozilla_firefox_derived:
 telemetry_derived:
   glean: False
   app_id: telemetry
-  source_table: telemetry.deanonymized_events
+  source_table: telemetry_derived.deanonymized_events
   start_date: 2020-01-01
   dag_name: bqetl_event_rollup
   user_properties:
